# SqlDbWrpr

./: .gitignore  .pre-commit-config.yaml  CreateDbSqlScript.ps1  DockerRebuild.ps1  Dockerfile  README.md  README.rst  ReleaseNotes.md  coverage.xml  docker-compose.yaml  docker-compose.yml  install.ps1  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md  config.yaml
.github/actions/configure-poetry/: action.yaml
.github/workflows/: 01-pre-commit.yml  03-ci.yml  04-build-and-release-to-pypi.yml  build-and-release-to-pypi.yml  check-rst-documentation.yml  ci.yaml  ci.yml  deployment-pipeline.yml  pre-commit.yml  py-temp-fork-pub-merge_with_docker-def.yaml  py-temp-fork-pvt_merge_with_docker-def.yaml  release.yml
.packageit/: packageit.ini  release.toml
docs/source/: api.rst  conf.py  index.rst
scripts/: setup_db.sql
src/: sqldbwrpr.py
src/sqldbwrpr/: __init__.py  sqldbwrpr.py
tests/: conftest.py  fixtures.py  test_sqldbwrpr.py
