[project]
name = 'SQLDbWrpr'
version = '4.1.3'
authors = [
    { name = 'Hendrik du Toit', email = 'hendrik@brightedge.co.za' },
    { name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
    { name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
]
description = 'Wrapper for importing CSV and Text files into MySQL and Postgress'
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Topic :: Topic :: Software Development',
    'Topic :: Topic :: Text Processing',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
readme = {file = 'README.rst', content-type = 'text/x-rst'}
requires-python = '>=3.10, <=12.0'
dependencies = [
     'beetools',
  ]

[project.optional-dependencies]
dev = [
    'git-it',
    'codecov',
    'docutils',
    'pytest',
    'pytest-cov',
    'rstcheck',
]

[project.urls]
Changelog = 'https://github.com/RealTimeEvents/rte-api/blob/enhancement/master/CHANGES.md'
Homepage = 'https://github.com/RealTimeEvents/rte-api'

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-git >= 1.1",
#    "pytest-runner",
#    "toml",
#    "reahl-component-metadata>=6.1,<6.2'",
#    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py311"]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'

[tool.coverage.run]
source = ['src']

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '-vv', '--ignore-glob=*\\Archive']
#addopts = ['--import-mode=importlib', "-v", "--cov=./", "--ignore-glob=*\\Archive", "--cov-report=html"]
pythonpath = ['src','src\resultcollector', 'tests' ]
markers = [
    "select: Run a selection of tests",
]
#filterwarnings = [
#    "ignore::DeprecationWarning",
#]
#python_functions = 'demo_setup'
testpaths = 'tests'
